--- a/composer.json
+++ b/composer.json
@@ -21,16 +21,21 @@
         "issues": "https://github.com/noiselabs/SmartyBundle/issues"
     },
     "require": {
-        "php": "^5.3.3 || ^7.0",
-        "symfony/framework-bundle": "~2.1",
-        "smarty/smarty": "3.1.*",
-        "symfony/templating": "~2.1"
+        "php": ">=5.5.0",
+        "ext-intl": "*",
+        "symfony/framework-bundle": "~2.8|~3.0",
+        "symfony/templating": "~2.8|~3.0",
+        "smarty/smarty": "3.1.*,<=3.1.27"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0|~5.0",
-        "symfony/security": "~2.1",
-        "symfony/yaml": "~2.1",
-        "symfony/assetic-bundle": "~2.0"
+        "mopa/bootstrap-bundle": "~3.0",
+        "phpunit/phpunit": "~4.0",
+        "symfony/assetic-bundle": "~2.0",
+        "symfony/expression-language": "~2.8|~3.0",
+        "symfony/phpunit-bridge": "^3.0",
+        "symfony/security": "~2.8|~3.0",
+        "symfony/security-acl": "~2.8|~3.0",
+        "symfony/yaml": "~2.8|~3.0"
     },
     "suggest": {
         "symfony/assetic-bundle": "Assetic support in Smarty templates",
@@ -38,6 +43,9 @@
         "mopa/bootstrap-sandbox-bundle": "Integration of Twitter Bootstrap into Symfony2 (extra)",
         "liip/theme-bundle": "Integration of Twitter Bootstrap into Symfony2 (themes)",
         "knplabs/knp-menu-bundle": "Smarty3 integration with KnpMenu (object oriented menus)"
+    },
+    "conflict": {
+        "kriswallsmith/assetic": "<1.1.3"
     },
     "autoload": {
         "psr-0": { "NoiseLabs\\Bundle\\SmartyBundle": "" }
