--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "symfony/assetic-bundle": "~2.0",
         "symfony/expression-language": "~2.8|~3.0",
         "symfony/phpunit-bridge": "^3.0",
-        "symfony/security": "~2.8|~3.0",
+        "symfony/security": "^3.4.48|^4",
         "symfony/security-acl": "~2.8|~3.0",
         "symfony/yaml": "~2.8|~3.0"
     },
